# computer-use-mcp

./: .gitattributes  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  claude_desktop_config.json  pyproject.toml  run_cli.py  run_server.py  setup.py  smithery.yaml
src/: README.md
src/computer_use_mcp/: __init__.py  __main__.py  cli.py  core.py  input_controller.py  screenshot.py  server.py  utils.py  window_manager.py
tests/: README.md  conftest.py  test_basic.py  test_computer_control.py  test_ocr_standalone.py  test_old_api.py  test_screenshot.py  test_window_functions.py
